--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
+    "currency-icons": "^1.0.14",
     "firebase": "^11.8.1",
     "motion": "^12.16.0",
     "react": "^19.1.0",
