--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "currency-icons": "^1.0.14",
+    "date-fns": "^4.1.0",
     "firebase": "^11.8.1",
+    "jodit-react": "^5.2.19",
     "motion": "^12.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
     "react-slick": "^0.30.3",
+    "react-spinners": "^0.17.0",
     "sweetalert2": "^11.6.13",
     "tailwindcss": "^4.1.8"
   },
