--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
+    "react-scroll": "^1.9.3",
     "react-slick": "^0.30.3",
     "react-spinners": "^0.17.0",
     "sweetalert2": "^11.6.13",
